--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           distribution: temurin
           java-version: 17
-      - name: Build JIB container and publish to GitHub Packages
+      - name: Build Docker container and publish to GitHub Packages
         run: ./gradlew jib -Djib.to.auth.username=${{ github.actor }} -Djib.to.auth.password=${{ github.token }}
 
