ci(frontend): disable eslint

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,5 +16,7 @@ jobs:
           distribution: temurin
           java-version: 17
       - name: Build Docker container and publish to GitHub Packages
+        env:
+          CI: ""
         run: ./gradlew jib -Djib.to.auth.username=${{ github.actor }} -Djib.to.auth.password=${{ github.token }}
 
