--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,11 +26,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-chart-editor": "^0.45.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.5",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.4",
     "redux": "^4.2.0",
     "tiny-uid": "^1.1.2",
     "typescript": "^4.9.5",
