fix(frontend): fix error on empty folder, folder icons for files

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/websocket": "^1.0.5",
     "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
     "d3": "^7.6.1",
     "eslint": "^8.22.0",
     "i18next": "^22.4.9",
@@ -25,6 +26,7 @@
     "plotly.js": "^2.23.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-color": "^2.19.3",
     "react-chart-editor": "^0.45.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
