--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,10 @@ jobs:
           java-version: 17
       - name: Build Docker container and publish to GitHub Packages
         env:
-          CI: ""
-        run: ./gradlew jib -Djib.to.auth.username=${{ github.actor }} -Djib.to.auth.password=${{ github.token }}
+          CI: "" # disable eslint
+        run: ./gradlew jib \
+          -Djib.to.auth.username=${{ github.actor }} \
+          -Djib.to.auth.password=${{ github.token }} \
+          -Djib.from.platforms=linux/amd64,linux/arm64
+
 
