--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - 8080:8080
       - 8090:8090 # Metrics
     volumes:
-      - ./compose-workdir/:/tmp
+      - ./compose-workdir/:/root
     environment:
       PORT: 8080
       JAVA_TOOL_OPTIONS: "-Xms256M -Xmx10G"
